// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box bg prop sets background color 1`] = `
.c0 {
  background-color: #7280ed;
}

<div
  className="c0"
/>
`;

exports[`Box bg prop sets custom background color 1`] = `
.c0 {
  background-color: #ff6d00;
}

<div
  className="c0"
/>
`;

exports[`Box color prop sets color 1`] = `
.c0 {
  color: #e4732d;
}

<div
  className="c0"
/>
`;

exports[`Box m prop sets margin 1`] = `
.c0 {
  margin: 6px;
}

<div
  className="c0"
/>
`;

exports[`Box p prop sets padding 1`] = `
.c0 {
  padding: 6px;
}

<div
  className="c0"
/>
`;

exports[`Box renders 1`] = `
<div
  className=""
/>
`;

exports[`Box width prop sets width 1`] = `
.c0 {
  width: 50%;
}

<div
  className="c0"
/>
`;
